# blockchain_utilities

./: .gitmodules  CMakeLists.txt
libraries/: CMakeLists.txt
programs/: CMakeLists.txt  script.cpp  script.cpp.autosave  transaction.json
